added SignupRequest, AuthController